--- a/biostar/apps/badges/templates/default.html
+++ b/biostar/apps/badges/templates/default.html
@@ -1,5 +1,5 @@
-<p>Congratulations!</p>
+<p>¡Felicitaciones!</p>
 
-<p>You have been awarded the {{ badge.name }} badge!</p>
+<p>Acabas de ganar la medalla {{ badge.name }}</p>
 
-<p>And so your reputations grows ...</p>
+<p>Y tu reputación está creciendo ...</p>
