--- a/biostar/static/biostar.style.less
+++ b/biostar/static/biostar.style.less
@@ -21,12 +21,12 @@ The color of a background that should stand out.
 The color of each post type.
 Default means with no answers.
 */
-@DEFAULT_POST: #5B8C3E;
+@DEFAULT_POST: #bdc3c7;
 
-@ANSWERED_POST: #5B8C3E;
+@ANSWERED_POST: #27ae60;
 @COMMENTED_POST: #436C27;
 @ACCEPTED_POST: #436C27;
-@UNANSWERED_POST: #8f2c47;
+@UNANSWERED_POST: #e74c3c;
 
 
 @DEFAULT_QUESTION: #5B8C3E;
